--- a/course.css
+++ b/course.css
@@ -1,24 +1,51 @@
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-	padding: 5px;
-} 
-.course-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 body {
-  background-color: rgb(65, 58, 84);
-
+  background-color: rgb(0, 0, 0);
+  color: #ffffff;
+  text-align: center;
+  padding: 15px;
 }
 
-#view-more-button {
-  display: block;
-  margin-top: 10px;
-  padding: 5px 10px;
-  border: none;
-  background-color: #007bff;
-  color: #fff;
-  cursor: pointer;
+.header {
+  padding: 15px;
+}
+
+#course-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  background-color: #000000;
+  color: #000000;
+}
+
+.grid-item {
+  background-color: rgb(255, 255, 255);
+  border: 1px solid #ddd;
+  padding: 1rem;
+  text-align: center;
+}
+
+.grid-item h2 {
+  margin-top: 0;
+}
+
+.grid-item img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 1rem;
+}
+
+.grid-item p {
+  margin-bottom: 0;
+}
+
+img {
+  border-radius: 50%;
+  height: 5cm;
+  width: 3cm;
+}
+
+select {
+  width: 15cm;
+  height: 3rem;
+  font-weight: bold;
 }
